Prevent call into plugin if plugin is stopped. Fixes crash in plugin while reload/navigate while plugin is streaming. bug 54186, r=av, sr=buster